@@ -1,3 +1,4 @@
+ADD_SUBDIRECTORY(complexpingpong)
 ADD_SUBDIRECTORY(listnames)
 ADD_SUBDIRECTORY(pingpong)
 
